--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,21 @@ android {
             buildConfigField "int", "SCHEDULE_LAST_DAY_END_DAY", "30"
             buildConfigField "String", "SCHEDULE_FEEDBACK_URL", '"https://frab.cccv.de/en/33C3/public/events/%s/feedback/new"'
         }
+        ccceh17 {
+            applicationId "org.ligi.fahrplan"
+            buildConfigField "String", "SCHEDULE_URL", '"https://eh17.easterhegg.eu/Fahrplan/schedule.xml"'
+            buildConfigField "String", "SCHEDULE_DOMAIN_PART", '"https://eh17.easterhegg.eu/"'
+            buildConfigField "String", "SCHEDULE_EVENT_PART", '"/events/%1$s.html"'
+            buildConfigField "String", "SCHEDULE_PART", '"/Fahrplan"'
+            buildConfigField "String", "VENUE", '"WBH"'
+            buildConfigField "int", "SCHEDULE_FIRST_DAY_START_YEAR", "2017"
+            buildConfigField "int", "SCHEDULE_FIRST_DAY_START_MONTH", "4"
+            buildConfigField "int", "SCHEDULE_FIRST_DAY_START_DAY", "14"
+            buildConfigField "int", "SCHEDULE_LAST_DAY_END_YEAR", "2017"
+            buildConfigField "int", "SCHEDULE_LAST_DAY_END_MONTH", "4"
+            buildConfigField "int", "SCHEDULE_LAST_DAY_END_DAY", "17"
+            buildConfigField "String", "SCHEDULE_FEEDBACK_URL", '"https://frab.cccv.de/en/EH2017/public/events/%s/feedback/new"'
+        }
     }
 
     lintOptions {
